--- a/web/src/index.css
+++ b/web/src/index.css
@@ -122,3 +122,32 @@
 button.absolute.top-4.right-4 {
   display: none !important;
 }
+
+.toast-with-progress-success::before,
+.toast-with-progress-error::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 3px;
+  width: 100%;
+  animation: toast-progress 4s linear forwards;
+  border-radius: 0 0 12px 12px;
+}
+
+.toast-with-progress-success::before {
+  background: linear-gradient(to right, #14b8a6, #0f766e);
+}
+
+.toast-with-progress-error::before {
+  background: linear-gradient(to right, #f43f5e, #be123c);
+}
+
+@keyframes toast-progress {
+  from {
+    width: 100%;
+  }
+  to {
+    width: 0%;
+  }
+}
