--- a/web/src/common/components/global-loader/loader.module.css
+++ b/web/src/common/components/global-loader/loader.module.css
@@ -1,7 +1,7 @@
 .loader {
   width: 60px;
   aspect-ratio: 4;
-  --_g: no-repeat radial-gradient(circle closest-side, #137849 90%, #1a4e0d00);
+  --_g: no-repeat radial-gradient(circle closest-side, #2dc17c 90%, #1a4e0d00);
   background: var(--_g) 0% 50%, var(--_g) 50% 50%, var(--_g) 100% 50%;
   background-size: calc(100% / 3) 100%;
   animation: l7 1s infinite linear;
