feat(web): loaders improviments

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -151,3 +151,13 @@ button.absolute.top-4.right-4 {
     width: 0%;
   }
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 1000px #fff inset !important;
+  box-shadow: 0 0 0 1000px #fff inset !important;
+  -webkit-text-fill-color: #1f2937 !important;
+  transition: background-color 5000s ease-in-out 0s;
+}
